2011-08-16  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_servers.php: Renamed enterprise ICMP and SNMP
	  servers in the server view.

2011-08-16  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/db/db_sanity.php: fixes the notice php messages and warnings php
	messages. And fixed the uninitialised modules erasing.
	
	Fixes: #3392431

2011-08-16  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/estado_monitores.php: erased the notice php messages
	when $module["extended_info"] is empty.

2011-08-16  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/snmpconsole/snmp_view.php, godmode/menu.php,
	godmode/snmpconsole/snmp_trap_generator.php: moved the form to generate
	traps into godmode in the submenu "Manage SNMP console".
	
	Fixes: #3390513

2011-08-16 Dario Rodriguez <dario.rodriguez@artica.es>
	
	* pandoradb_data.sql: Changed days_compact field of tconfig to 90.
	This value set to disable db compact feature by default because is
	greater than days_purge (60 days).

2011-08-16  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: fixed the warning in
	the apache logs, and show the percentile bar correctly in the visual console
	editor.
	
	Fixes: #3389967

2011-08-16  Miguel de Dios  <miguel.dedios@artica.es>

	* include/styles/pandora.css,
	images/skin/skin_default/include/styles/pandora.css, general/header.php:
	change the color of autorefresh in header.
	
	Fixes: #3371429 

2011-08-16 Javier Lanz <javier.lanz@artica.es>

	* extensions/module_groups.php: Fixed table width to 98%

2011-08-13  Sancho lerena <slerena@artica.es>

	* pandoradb_data.sql: Added default action "Pandora FMS event".

	* godmode/alerts/alert_actions.php: Fixed bug when update an action
	and name is the same.

	* godmode/snmpconsole/snmp_alert.php: Fixed witdh of field1.

2011-08-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_tags.php: Fixed false value in foreach
