@@ -1,3 +1,10 @@
+2011-08-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* pandoradb.oracle.sql
+	include/functions_agents.php
+	include/functions_networkmap.php: Removed several mistakes in Pandora
+	console over Oracle. 
+
 2011-08-16  Ramon Novoa  <rnovoa@artica.es>
 
 	* include/functions_servers.php: Renamed enterprise ICMP and SNMP
